@@ -1,3 +1,3 @@
 usr/include/pgpool2
-usr/lib/pgpool2/libpcp.a	usr/lib/pgpool2
-usr/lib/pgpool2/libpcp.so	usr/lib/pgpool2
+usr/lib/libpcp.a
+usr/lib/libpcp.so
