@@ -1,1 +1,1 @@
-usr/lib/pgpool2/libpcp.so.*	usr/lib/pgpool2
+usr/lib/libpcp.so.*
